# xgboost-book

./: .gitignore  README.md  pyproject.toml
xgboost_book/chap2/: __main__.py  converters.py  extract.py  pipeline.py  preprocessing.py  train_test_data.py
xgboost_book/survey_model/: __main__.py  converters.py  extract.py  hyperparameters.py  models.py  pipeline.py  preprocessing.py  sagemaker.py  sagemaker_model_eval.py  train_test_data.py  viz.py
