[tool.poetry]
name = "xgboost-book"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"
packages = [{include = "xgboost_book"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.17.9"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
