[tool.poetry]
name = "xgboost-book"
version = "0.1.0"
description = ""
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
readme = "README.md"
packages = [{include = "xgboost_book"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.17.10"
requests = "^2.29.0"
scikit-learn = "^1.2.2"
feature-engine = "^1.6.0"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
xgboost = "^1.7.5"
cffi = "^1.15.1"
dtreeviz = "^2.2.1"
graphviz = "^0.20.1"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
types-requests = "^2.29.0.0"
pandas-stubs = "^2.0.0.230412"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
